Implement today option on mdate.

--- a/MANUALHTML/mdate.html
+++ b/MANUALHTML/mdate.html
@@ -105,6 +105,7 @@
               <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="wex.html">wex(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
@@ -147,6 +148,7 @@ DIRECT-MODE
         mdate -e &lt;yyyymm&gt;m/±&lt;dif&gt;               : dif 月先までの月を連続出力
         mdate &lt;yyyymm1&gt;m &lt;yyyymm2&gt;m             : 月の差
         mdate -ly &lt;yyyymm&gt;m                     : 前年月
+        mdate today                             : 今日の年月日
 
 FILTER-MODE
 日付    mdate -f -y &lt;f&gt;                         : 曜日
@@ -166,7 +168,7 @@ FILTER-MODE
         mdate -f -e &lt;f&gt;m ±&lt;dif&gt;                 : 月の加算展開
         mdate -f -ly &lt;f&gt;m                       : 前年月
 
-Version : Sat Jun 20 21:57:21 JST 2020
+Version : Sun Sep 25 06:47:00 JST 2022
 Edition : 1</pre>
 <h3>【例1】dif先の日付、月の情報を出力</h3>
 <pre class="prettyprint">$ mdate 20090912/+5
@@ -242,7 +244,7 @@ $</pre>
 <p><a href="calclock.html" class="command">calclock(1)</a>、<a href="dayslash.html" class="command">dayslash(1)</a>、<a href="yobi.html" class="command">yobi(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: Sun Sep 25 06:49:14 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
